# CircuitPython_GT911

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  README.md  README.rst  gt911.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
examples/: gt911_simpletest.py
