# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Robert Grizzell
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-gt911"
description = "CircuitPython Driver for Goodix GT911-based touch screens"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Robert Grizzell", email = "robert@grizzell.me"}
]
urls = {Homepage = "https://github.com/rgrizzell/CircuitPython_GT911"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "goodix",
    "gt911",
    "touch",
    "touchscreen",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["gt911"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
